@@ -10,6 +10,7 @@ Changelog
 Changes:
     * [Feature] Fluid 5.1 support.
     * [Bugfix] Prevent hints from overwriting themselves.
+    * [Bugfix] Prevent a fatal when trying to analyse a class with objects as default values in its methods.
 
 -----
 
